# dog-school

./: .coveragerc  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: index.md
src/dog_school/: app.py  domain.py  main.py  models.py
tests/: conftest.py  test_api.py  test_app.py
