[bdist_wheel]
universal = 1

[metadata]
name = dog-school
author = asyncon
author_email = 53700266+asyncon@users.noreply.github.com
description = Dog School
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_file = LICENSE
url = https://github.com/asyncon/dog-school
project_urls =
    Bug Tracker = https://github.com/asyncon/dog-school/issues
    Documentation = https://asyncon.github.io/dog-school/
    Source Code = https://github.com/asyncon/dog-school
requires_python = >=3.10
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT license
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     dog-school = dog_school.cli:main
